[package]
name = "ups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.25.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Devices_Custom",
    "Devices_Enumeration",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_WinRT",
]
